examples/bad/hold_match_if_for_move.mko
// EXPECT: use of moved
// match + if + for product: move inside nested for poisons after match.
fn consume(t: string) {}

fn main() {
    hold let s = "hi"
    match 1 {
        0 => { },
        _ => {
            if true {
                for i in range 1 {
                    consume(s)
                }
            }
        },
    }
    print(s)
}
